--- a/source/stylesheets/modules/_sidebar.sass
+++ b/source/stylesheets/modules/_sidebar.sass
@@ -5,8 +5,11 @@
   width: 100%
   z-index: 3
   +breakpoint($breakpoint-2...)
+    max-width: 50rem
     padding: 3rem
     width: 40%
+  +breakpoint($breakpoint-4...)
+    padding-left: 6rem
 
 .sidebar__logo
   color: white
